--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@
 *.user
 *.userosscache
 *.sln.docstates
-*.gitattributes
-*.gitignore
+.gitattributes
+.gitignore
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
