--- a/tests/DateTimeGiraffeTest.Test/DateTimeGiraffeTest.Test.csproj
+++ b/tests/DateTimeGiraffeTest.Test/DateTimeGiraffeTest.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="Moq" Version="4.15.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
@@ -15,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\DateTimeGiraffe.API\DateTimeGiraffe.API.csproj" />
     <ProjectReference Include="..\..\src\Giraffe.API\DateTimeGiraffe.API.csproj" />
   </ItemGroup>
 
